# Sales_Mapping

./: README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.vue  main.js  registerServiceWorker.js  router.js
frontend/src/Views/: Home.vue
frontend/src/components/: CustomerForm.vue  GoogleMap.vue  GoogleMapView.vue  LiveLocation.vue  LocationChecker.vue  LoginForm.vue  SalesOrderForm.vue
frontend/src/pages/: CustomerList.vue  Home.vue  Login.vue  RealTimeTracking.vue  SalesOrderList.vue
frontend/src/utils/: FrappeApi.js  websocket.js
sales/: hooks.py
sales/public/js/: user_location_report.js
sales/sales/: api.py
sales/sales/doctype/customer_check_in/: customer_check_in.js  customer_check_in.json  customer_check_in.py  test_customer_check_in.py
sales/sales/doctype/customer_location/: customer_location.js  customer_location.json  customer_location.py  test_customer_location.py
sales/sales/doctype/user_location/: test_user_location.py  user_location.js  user_location.json  user_location.py
sales/sales/page/user_location_map/: user_location_map.js  user_location_map.json
